ic-small changes

--- a/html/ivens-craft/ic-bibliography.html
+++ b/html/ivens-craft/ic-bibliography.html
@@ -97,14 +97,26 @@
 
 					<section class="toc">
 						<ol aria-label="Menu">
-							<li><a href="#bibliography">Bibliography</a></li><!-- Change -->
+							<li><a href="#overview">Overview</a></li><!-- Change -->
+							<li><a href="#primary">Primary Sources</a></li>
+							<li><a href="#secondary">Secondary Sources</a></li>
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
 						</ol>
 					</section>
 
-					<section aria-labelledby="bibliography"><!-- Change -->
-						<h3 id="bibliography">Bibliography</h3><!-- Change -->
+					<section aria-labelledby="overview"><!-- Change -->
+						<h3 id="overview">Overview</h3><!-- Change -->
+
+					</section>
+
+					<section aria-labelledby="primary"><!-- Change -->
+						<h3 id="primary">Primary Sources</h3><!-- Change -->
+
+					</section>
+
+					<section aria-labelledby="secondary"><!-- Change -->
+						<h3 id="secondary">Secondary Sources</h3><!-- Change -->
 
 					</section>
 
@@ -134,7 +146,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-contributors_collaborators.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -142,7 +154,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-project_introduction.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
