--- a/html/ivens-craft/ic-craft_legacies.html
+++ b/html/ivens-craft/ic-craft_legacies.html
@@ -138,7 +138,7 @@
 						
 						<p class="caption-text">Anonymous, “Hilda and Caroline Clark Double Wedding” (Photograph, London, 31 August 1940), Martin Copeland Private Collection, United Kingdom. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. Sisters Caroline and Hilda Clark, two of William Ivens' graddaughters, had a double wedding in 1940 during the Second World War.</p>
 
-						<p>Moreover, this genealogical amnesia may have also been purposeful, an attempt to protect the family during a time of anti-Black sentiment in England. Chris Clark guesses that his grandparents “conspired to ‘lose’ the family history of the fugitive slaves,” and “to erase it from the collective memory as far as possible.” He adds: “I must say that they were remarkably successful in this” (Clark 2023a; add citation for email from March 21, 2024). And yet, Julia-Ellen Craft Davis, a great-granddaughter of William Ivens’ brother Charles, reminds us to be thankful that the effort “to hide the family’s ancestry in England was not completely successful” (Davis 2023).</p>
+						<p>Moreover, this genealogical amnesia may have also been purposeful, an attempt to protect the family during a time of anti-Black sentiment in England. Chris Clark guesses that his grandparents “conspired to ‘lose’ the family history of the fugitive slaves,” and “to erase it from the collective memory as far as possible.” He adds: “I must say that they were remarkably successful in this” (Clark 2023a; Clark 2024). And yet, Julia-Ellen Craft Davis, a great-granddaughter of William Ivens’ brother Charles, reminds us to be thankful that the effort “to hide the family’s ancestry in England was not completely successful” (Davis 2023).</p>
 
 						<div class="double-image">
 							<img loading="lazy" width="345" height="522" src="/img/ivens-craft/liv_028017_0001_deriv-690px.jpg" srcset="/img/ivens-craft/liv_028017_0001_deriv-690px.jpg 690w, /img/ivens-craft/liv_028017_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028017_0001_deriv-572px.jpg 572w, /img/ivens-craft/liv_028017_0001_deriv-436px.jpg 436w, /img/ivens-craft/liv_028017_0001_deriv-345px.jpg 345w, /img/ivens-craft/liv_028017_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028017_0001_deriv-286px.jpg 286w, /img/ivens-craft/liv_028017_0001_deriv-218px.jpg 218w" sizes="(min-width: 992px) 345px, (min-width: 768px) 312px, (min-width: 480px) calc(50vw - 22px), calc(100vw - 34px)" alt="Woman wearing a long coat and hat walking down a sidewalk." />
@@ -195,7 +195,7 @@
 
 						<aside class="text-box">The Craft family story is “... not a unique story, but quite a rare story.” - Martin Copeland</aside>
 
-						<p>That the Craft family diaspora has kept in touch across centuries, nations, and oceans is no small feat, but is also not just happenstance. Rather, it speaks to the centrality of family, community, and belonging to the Craft story. William Ivens Craft lived a life circumscribed, though not defined, by race and poverty. As he wrote in 1881, “I [...] am striving to do the best I can” (Craft 1881i). Ultimately, William Ivens created for himself a home, a life, and, most importantly, a family – despite the setbacks.</p>
+						<p>That the Craft family diaspora has kept in touch across centuries, nations, and oceans is no small feat, but is also not just happenstance. Rather, it speaks to the centrality of family, community, and belonging to the Craft story. William Ivens Craft lived a life circumscribed, though not defined, by race and poverty. As he wrote in 1881, “I [...] am striving to do the best I can” (Craft 1881a). Ultimately, William Ivens created for himself a home, a life, and, most importantly, a family – despite the setbacks.</p>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
@@ -224,7 +224,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-transatlantic_family.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -232,7 +232,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-contributors_collaborators.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
