--- a/html/ivens-craft/ic-family_loss.html
+++ b/html/ivens-craft/ic-family_loss.html
@@ -138,7 +138,7 @@
 					<section aria-labelledby="be-alright"><!-- Change -->
 						<h3 id="be-alright">“I Shall be Alright”</h3><!-- Change -->
 
-						<p>Rather than hold his old promise to Elizabeth Pease Nichol and return to his family in the United States, William Ivens instead stayed and built his life in London – likely due in no small part to the changes wrought by his fateful change of lodging in 1882. As he had written to Chesson that day, “I shall be alright” (Craft 1882d).</p>
+						<p>Rather than hold his old promise to Elizabeth Pease Nichol and return to his family in the United States, William Ivens instead stayed and built his life in London – likely due in no small part to the changes wrought by his fateful change of lodging in 1882. As he had written to Chesson that day, “I shall be alright” (Craft 1882c).</p>
 
 						<span class="center vertical">
 							<img loading="lazy" class="illustration" width="624" height="969" src="/img/ivens-craft/liv_028057_0001_deriv-980px.jpg" srcset="/img/ivens-craft/liv_028057_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028057_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028057_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028057_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028057_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028057_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028057_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028057_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Two men in suits; one is standing and one Is seated." />
@@ -181,7 +181,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-looking_for_louisa.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -189,7 +189,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-transatlantic_family.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
