--- a/html/ivens-craft/ic-growing_roots.html
+++ b/html/ivens-craft/ic-growing_roots.html
@@ -120,7 +120,7 @@
 						
 						<p class="caption-text">Hope McCaffrey, “Charlotte Street” (Photograph, London, 15 March 2023), Hope McCaffrey Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. Present-day (2023) view of Charlotte Street in Fitzroy Square, where William Ivens moved in with the Lejeunes, seeking to “economize to a maximum.”</p>
 
-						<p>A prominent citizen, Felix Lejeune was also a member of the England United Grand Lodge of England Freemasons (“1871 England Census”; “United Grand Lodge” 1864). Born in France around 1829, forty-year-old Felix Lejeune married London-born, sixteen-year-old Louisa Mary Woodley on 5 April 1869 (“England Marriages and Banns,” 1869). When they took William Ivens on as a boarder, the Lejeunes had four children, at least one servant, and Louisa worked making waistcoats (“1881 England Census”; Green 2018, 27; Anonymous 1878i). According to the Lejeune family descendants, Louisa also ran a boarding house on Charlotte street to bring in a few extra pounds (Barnes 2024).</p>
+						<p>A prominent citizen, Felix Lejeune was also a member of the England United Grand Lodge of England Freemasons (“1871 England Census”; “United Grand Lodge” 1864). Born in France around 1829, forty-year-old Felix Lejeune married London-born, sixteen-year-old Louisa Mary Woodley on 5 April 1869 (“England Marriages and Banns,” 1869). When they took William Ivens on as a boarder, the Lejeunes had four children, at least one servant, and Louisa worked making waistcoats (“1881 England Census”; Green 2018, 27; Anonymous 1878h). According to the Lejeune family descendants, Louisa also ran a boarding house on Charlotte street to bring in a few extra pounds (Barnes 2024).</p>
 
 						<span class="center vertical">
 							<img loading="lazy" class="illustration" width="624" height="646" src="/img/ivens-craft/liv_028105_0001_deriv-980px.jpg" srcset="/img/ivens-craft/liv_028105_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028105_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028105_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028105_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028105_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028105_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028105_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028105_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Bird's eye view of street, buildings on both sides, people and horse-drawn carriages in the street." />
@@ -173,7 +173,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-transatlantic_racism.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -181,7 +181,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-looking_for_louisa.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
