--- a/html/ivens-craft/ic-looking_for_louisa.html
+++ b/html/ivens-craft/ic-looking_for_louisa.html
@@ -25,7 +25,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Merriweather:wght@400;700;900&family=Source+Sans+Pro:wght@400;600&family=Amaranth:wght@400;700&display=swap" rel="stylesheet"/>
 		<link rel="stylesheet" type="text/css" href="/css/critical.css?=newVers_0025"/>
-		<style>.image-wrapper::after{padding-bottom:calc((434/698)*100%)}</style><!-- Change -->
+		<style>.image-wrapper::after{padding-bottom:calc((598/698)*100%)}</style><!-- Change -->
 	</head>
 
 	<!-- Site code first adapted from Adrian S. Wisnicki's Fieldwork of Empire website (https://awisnicki.github.io/fieldwork_of_empire/) which is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -142,7 +142,7 @@
 																	
 							<p class="caption-text">Anonymous, “Felix Lejeune” (Photograph, [c.1829-1884]), Maureen [last name] Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. Felix Lejeune, who moved (or maybe even fled) from France to England, was a successful boot maker and a free mason who apaprently had a rather contentious relationship with the fraternity. He married the young woman with whom he lived in 1869, and went on to have a family of at least five children with her. His death precipitated a challenging period for his still young widow.</p> 
 
-						<p>Louisa Mary, a teenager likely unable to read or write at the time of her marriage to forty-year-old Felix Lejeune in 1869, scribbled a wobbly “X” on the marriage certificate under Felix Lejeune’s flourishing signature.  She listed John Woodley, her uncle, as her father. The pair married at the grand St. George’s Parish Church in Bloomsbury (“England Marriages and Banns” 1869). What is apparent is that Felix Lejeune was able to offer Louisa Mary financial security. In the 1870s, the Lejeune household boasted at least one domestic servant. This servant, however, caused the family trouble. In 1878, Felix and Louisa Mary took Annie Church, their servant, to court for stealing a gold ring worth six pounds. Louisa testified in court, claiming that she had spotted the ring at a nearby pawnbroker’s shop. The story circulated in <em>The Standard</em> (Anonymous 1878i).</p>
+						<p>Louisa Mary, a teenager likely unable to read or write at the time of her marriage to forty-year-old Felix Lejeune in 1869, scribbled a wobbly “X” on the marriage certificate under Felix Lejeune’s flourishing signature.  She listed John Woodley, her uncle, as her father. The pair married at the grand St. George’s Parish Church in Bloomsbury (“England Marriages and Banns” 1869). What is apparent is that Felix Lejeune was able to offer Louisa Mary financial security. In the 1870s, the Lejeune household boasted at least one domestic servant. This servant, however, caused the family trouble. In 1878, Felix and Louisa Mary took Annie Church, their servant, to court for stealing a gold ring worth six pounds. Louisa testified in court, claiming that she had spotted the ring at a nearby pawnbroker’s shop. The story circulated in <em>The Standard</em> (Anonymous 1878h).</p>
 
 						<img loading="lazy" class="illustration" width="700" height="525" src="/img/ivens-craft/liv_028126_0001_deriv-1400px.jpg" srcset="/img/ivens-craft/liv_028126_0001_deriv-286px.jpg 286w, /img/ivens-craft/liv_028126_0001_deriv-446px.jpg 446w, /img/ivens-craft/liv_028126_0001_deriv-572px.jpg 572w, /img/ivens-craft/liv_028126_0001_deriv-634px.jpg 634w, /img/ivens-craft/liv_028126_0001_deriv-700px.jpg 700w, /img/ivens-craft/liv_028126_0001_deriv-892px.jpg 892w, /img/ivens-craft/liv_028126_0001_deriv-1268px.jpg 1268w, /img/ivens-craft/liv_028126_0001_deriv-1400px.jpg 1400w" sizes="min-width: 992px) 700px, (min-width: 768px) 634px, calc(100vw - 34px)" alt="A large stone church with columns and a steeple in the background." />
 
@@ -203,7 +203,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-growing_roots.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -211,7 +211,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-family_loss.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
