--- a/html/ivens-craft/ic-reconstruction.html
+++ b/html/ivens-craft/ic-reconstruction.html
@@ -154,7 +154,7 @@
 							<p class="caption-text">William Craft, “’<a aria-label="External Link" href="https://archive.org/details/sim_new-outlook_1873-07-30_8_5/page/92/mode/2up?q=%22william+craft%22">Primary Education in Georgia</a>’” <em>The Christian Union</em> 8, no. 5 (30 July 1873): 92, Internet Archive. No known restrictions on publication. William Craft penned this article to not only make known his hopes for the Woodville school, but also likely to drum up support, financial and otherwise, for the endeavour.</p>
 
 	
-						<p>The Craft family also became involved in Reconstruction politics, joining the Republican Party in Georgia. William Craft, in 1873, applied for the office of Minister to Liberia, “with good prospects” the <em>Augusta Chronicle</em> reported (Anonymous 1873). The next year, he ran for state Senate in Georgia as a Republican (Anonymous 1874a). Both campaigns proved unsuccessful. However, in 1876, William represented Bryan County at the Georgia Republican State Convention. There, he was elected as an alternate delegate to the Republican National Convention (Blackett 1986, 129; Anonymous 1876a). Politics was a family affair. In Savannah, William Ivens’ older brother, Charles, was president of the Union Coterie club (Craft 1876).</p>
+						<p>The Craft family also became involved in Reconstruction politics, joining the Republican Party in Georgia. William Craft, in 1873, applied for the office of Minister to Liberia, “with good prospects” the <em>Augusta Chronicle</em> reported (Anonymous 1873). The next year, he ran for state Senate in Georgia as a Republican (Anonymous 1874c). Both campaigns proved unsuccessful. However, in 1876, William represented Bryan County at the Georgia Republican State Convention. There, he was elected as an alternate delegate to the Republican National Convention (Blackett 1986, 129; Anonymous 1876b). Politics was a family affair. In Savannah, William Ivens’ older brother, Charles, was president of the Union Coterie club (Craft 1876).</p>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
@@ -183,7 +183,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-new_dreams.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -191,7 +191,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-washington.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
