--- a/html/ivens-craft/ic-atlantic_life.html
+++ b/html/ivens-craft/ic-atlantic_life.html
@@ -165,7 +165,7 @@
 					<section aria-labelledby="education"><!-- Change -->
 						<h3 id="education">An English Education</h3><!-- Change -->
 						
-						<p>Education and acitivism grounded the lives of the Craft children. While the War of Rebellion raged in the United States, William Ivens, along with at least one of his brothers, enrolled in school in Brixton. William and his younger brother, Brougham, attended the Brixton Lodge College School in Atkinson Place. The school, run by Thomas Royle Quicke, had initially offered “preparation for the military and civil service examinations,” but by the time William Ivens attended, advertised “a sound Commercial and Classical Education” (Anonymous 1860; Anonymous 1874c).</p>
+						<p>Education and acitivism grounded the lives of the Craft children. While the War of Rebellion raged in the United States, William Ivens, along with at least one of his brothers, enrolled in school in Brixton. William and his younger brother, Brougham, attended the Brixton Lodge College School in Atkinson Place. The school, run by Thomas Royle Quicke, had initially offered “preparation for the military and civil service examinations,” but by the time William Ivens attended, advertised “a sound Commercial and Classical Education” (Anonymous 1860b; Anonymous 1874a).</p>
 
 						<span class="center vertical">
 							<img loading="lazy" class="illustration" width="624" height="361" src="/img/ivens-craft/liv_028053_0001_deriv-980px.jpg" srcset="/img/ivens-craft/liv_028053_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028053_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028053_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028053_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028053_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028053_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028053_0001_deriv-888px.jpg 888w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Newspaper advertisement for the Collegiate School in Brixton." />
@@ -210,7 +210,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-parents_escape.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -218,7 +218,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-new_dreams.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
