--- a/html/ivens-craft/ic-losing_finding.html
+++ b/html/ivens-craft/ic-losing_finding.html
@@ -124,9 +124,8 @@
 
 						<p>By 1877, the recovering William Ivens had made his way to Florida, where he was reunited with his brother, Charles. The Post Office Rail Services employed William Ivens and Charles in 1877, 1878, and 1879, and they worked as Route Agents between Savannah, Georgia, and Live Oak, Florida, and then later between Savannah and Jacksonville. The brothers made a salary between $900 and $1,000 each year (approximately $26,000 to $29,000 in 2024) (US Department of the Interior 1877, 422; 1879, 33).</p>
 
-						<span class="center vertical">
-							<img loading="lazy" class="illustration" width="624" height="191" src="/img/ivens-craft/liv_028107_0001_deriv-980px.jpg" srcset="/img/ivens-craft/liv_028107_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028107_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028107_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028107_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028107_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028107_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028107_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028107_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Text from a book listing William I. and Charles P. Craft as Route Agents on the Railway Mail Service." />
-						</span>
+						<img loading="lazy" class="illustration" width="700" height="235" src="/img/ivens-craft/liv_028107_0001_deriv-1400px.jpg" srcset="/img/ivens-craft/liv_028107_0001_deriv-286px.jpg 286w, /img/ivens-craft/liv_028107_0001_deriv-446px.jpg 446w, /img/ivens-craft/liv_028107_0001_deriv-572px.jpg 572w, /img/ivens-craft/liv_028107_0001_deriv-634px.jpg 634w, /img/ivens-craft/liv_028107_0001_deriv-700px.jpg 700w, /img/ivens-craft/liv_028107_0001_deriv-892px.jpg 892w, /img/ivens-craft/liv_028107_0001_deriv-1268px.jpg 1268w, /img/ivens-craft/liv_028107_0001_deriv-1400px.jpg 1400w" sizes="min-width: 992px) 700px, (min-width: 768px) 634px, calc(100vw - 34px)" alt="Text from a book listing William I. and Charles P. Craft as Route Agents on the Railway Mail Service." />
+	
 											
 							<p class="caption-text">US Post Office Department, “<a aria-label="External Link" href="https://archive.org/details/officialregister68unit/page/n5/mode/2up?q=%22craft%22">William Ivens Craft Railway Agent</a>,” in <em>Official Register of the Officers and Employés in the Civil, Military, and Naval Service on the Thirtieth of June, 1879</em> (Washington, D.C.: Government Printing Office, 1879), 33, Internet Archive. No known copyright or restrictions. Though documents and books published by the federal government may seem dry, these records offer critical insights that help researchers reconstruct the lives of people such as William Ivens Craft and his brothers.</p>
 
@@ -152,9 +151,9 @@
 					<section aria-labelledby="looks-home"><!-- Change -->
 						<h3 id="looks-home">William Ivens Looks Towards Home</h3><!-- Change -->
 
-						<p>It is not difficult to imagine, however, that William Ivens Craft was deeply jarred by the racism and difficulties his politically and economically prominent family faced. The Crafts were not merely trying to get by in the war-torn South. Rather, they aimed to uplift those around them and dared to dream a future of freedom, autonomy, and education for Black Americans – while white supremacists violently attempted to reclaim the American South. As William Ivens later expressed in a letter, “there is still an undercurrent of feeling pervading throughout the U.S. against a ‘man of colour’” (Craft 1881c).</p>
+						<p>It is not difficult to imagine, however, that William Ivens Craft was deeply jarred by the racism and difficulties his politically and economically prominent family faced. The Crafts were not merely trying to get by in the war-torn South. Rather, they aimed to uplift those around them and dared to dream a future of freedom, autonomy, and education for Black Americans – while white supremacists violently attempted to reclaim the American South. As William Ivens later expressed in a letter, “there is still an undercurrent of feeling pervading throughout the U.S. against a ‘man of colour’” (Craft 1881b).</p>
 
-						<p>Despite – or perhaps because of – the Craft family’s political visibility and hard work among rural African American communities in Georgia, the Crafts became targets of scrutiny. In 1876, a Boston newspaper alleged that instead of investing the funds he had raised into the school, William Craft lived “on the money he collects… applying it to his own use.” The article asked “Where is his school? Who attends it?” and elicited a response from the Crafts. “Come now, Crafts, and tell us all about it” (Anonymous 1876c). William responded by bringing a libel suit against the Boston firm Naylor and Co., which proved unsuccessful.</p>
+						<p>Despite – or perhaps because of – the Craft family’s political visibility and hard work among rural African American communities in Georgia, the Crafts became targets of scrutiny. In 1876, a Boston newspaper alleged that instead of investing the funds he had raised into the school, William Craft lived “on the money he collects… applying it to his own use.” The article asked “Where is his school? Who attends it?” and elicited a response from the Crafts. “Come now, Crafts, and tell us all about it” (Anonymous 1876a). William responded by bringing a libel suit against the Boston firm Naylor and Co., which proved unsuccessful.</p>
 
 						<span class="center vertical">
 							<img loading="lazy" class="illustration" width="624" height="303" src="/img/ivens-craft/liv_028044_0001_deriv-980px.jpg" srcset="/img/ivens-craft/liv_028044_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028044_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028044_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028044_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028044_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028044_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028044_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028044_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Newspaper article announcing that William Craft will have to pay money for a libel suit." />
@@ -162,7 +161,7 @@
 					
 							<p class="caption-text">Anonymous, “An Award in Libel Case,” <em>New York Times</em> 27, no. 8375 (July 16, 1878): 1. No known restrictions on publication. The Crafts’ libel suit received great attention from the media. Although they ultimately lost the case as well as status in the eyes of their white former collaborators, much of what we now know about the co-operative school comes from these court proceedings and testimonies, which newspaper editors printed daily.</p>
 
-						<p>During the trial, scholar Barbara McCaskill (2015, 84) points out, “the Crafts’ former sponsors […] helped derail William and Ellen’s southern scheme and muddy William’s character.” These former abolitionists smeared William Ivens’ character as well. It was during the trials – which drew much public attention – that Wendell Phillips recounted his alleged run-in with William Ivens in D.C. William Ivens did not appear as a witness and was thus unable to defend himself from such slander. Forced to pay court costs and half of the referees’ charges, which amounted to $1,000 in 1878 (some $30,000 in 2023), the expense of the lawsuit forced the Crafts to close Woodville school around 1880 (Anonymous 1878h; Fradin and Fradin 2006, 92).</p>
+						<p>During the trial, scholar Barbara McCaskill (2015, 84) points out, “the Crafts’ former sponsors […] helped derail William and Ellen’s southern scheme and muddy William’s character.” These former abolitionists smeared William Ivens’ character as well. It was during the trials – which drew much public attention – that Wendell Phillips recounted his alleged run-in with William Ivens in D.C. William Ivens did not appear as a witness and was thus unable to defend himself from such slander. Forced to pay court costs and half of the referees’ charges, which amounted to $1,000 in 1878 (some $30,000 in 2023), the expense of the lawsuit forced the Crafts to close Woodville school around 1880 (Fradin and Fradin 2006, 92).</p>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
@@ -191,7 +190,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="previous.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-washington.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -199,7 +198,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="next.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-return_to_england.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
